[package]
name = "DBbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
actix-web = "4.0"
actix-rt = "2.0"
actix-cors = "0.6"
dotenv = "0.15"
jsonwebtoken = "8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"