[package]
name = "DBbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "time"] }
uuid = { version = "1.3", features = ["v4"] }
actix-web = "4.0"
actix-rt = "2.0"
actix-cors = "0.6"
dotenv = "0.15"
jsonwebtoken = "8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14" 
base64 = "0.21" 
chrono = "0.4"
time = { version = "0.3", features = ["serde"] }
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
panic = "abort"

[build]
target = "x86_64-pc-windows-gnu"